# CashfreeAdapter Implementation Summary                                                       │ │                                                                                                  │ │   **Date:** 2025-10-15                                                                           │ │   **Phase:** C1 - Payment Rail Integration                                                       │ │   **Status:** ✅ COMPLETE                                                                         │ │                                                                                                  │ │   ---                                                                                            │ │                                                                                                  │ │   ## Overview                                                                                    │ │                                                                                                  │ │   Successfully implemented CashfreeAdapter for Indian market payments via UPI, cards, and        │ │   netbanking. The adapter integrates seamlessly with the existing RailAdapter interface and is   │ │    production-ready pending unit tests.                                                          │ │                                                                                                  │ │   ---                                                                                            │ │                                                                                                  │ │   ## Files Created (4 new files)                                                                 │ │                                                                                                  │ │   ### 1. `/packages/rails/src/cashfree/types.ts` (210 lines)                                     │ │   Complete TypeScript type definitions for Cashfree API v2025-01-01.               

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write .",
     "db:generate": "npm run generate --workspace=packages/database",
     "db:migrate": "npm run migrate:dev --workspace=packages/database",
+    "db:migrate:deploy": "npm run migrate:deploy --workspace=packages/database",
     "db:seed": "npm run seed --workspace=packages/database",
     "db:studio": "npm run studio --workspace=packages/database"
   },
