On branch main Your branch is ahead of 'origin/main' by 3 commits.   (use "git push" to publish your local commits)
Changes to be committed:
  modified:   LOCAL_DEVELOPMENT.md
  modified:   apps/api/src/index.ts
  modified:   package.json

Changes not staged for commit:
  modified:   apps/api/src/routes/agents/list.ts
  modified:   package-lock.json
  modified:   packages/database/prisma/seed.ts

Untracked files:
  "Screenshot 2025-10-26 at 11.54.19\342\200\257PM.png"

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "dev": "npm run dev --workspace=apps/api",
     "dev:frontend": "npm run dev --workspace=apps/frontend",
     "dev:all": "npm run dev --workspaces --if-present",
+    "dev:clean": "node -e \"try { require('child_process').execSync('lsof -ti :3001 | xargs kill -9', {stdio:'inherit'}); console.log('✅ Killed processes on port 3001'); } catch(e) { console.log('ℹ️  No processes found on port 3001'); }\"",
+    "dev:clean:all": "node -e \"try { require('child_process').execSync('lsof -ti :3000,3001 | xargs kill -9', {stdio:'inherit'}); console.log('✅ Killed processes on ports 3000 and 3001'); } catch(e) { console.log('ℹ️  No processes found on ports 3000 or 3001'); }\"",
+    "dev:restart": "npm run dev:clean && npm run dev",
+    "dev:restart:all": "npm run dev:clean:all && npm run dev:all",
+    "ps": "node -e \"console.log('\\n🔍 Processes on port 3000:'); try { require('child_process').execSync('lsof -i :3000', {stdio:'inherit'}); } catch(e) { console.log('  None'); } console.log('\\n🔍 Processes on port 3001:'); try { require('child_process').execSync('lsof -i :3001', {stdio:'inherit'}); } catch(e) { console.log('  None\\n'); }\"",
     "build": "npm run build:api && npm run build:frontend",
     "build:api": "npm run build --workspace=apps/api",
     "build:frontend": "npm run build --workspace=apps/frontend",
